--- a/settings.gradle
+++ b/settings.gradle
@@ -7,8 +7,7 @@
  * in the user guide at https://docs.gradle.org/4.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'spring-boot'
+rootProject.name = 'spring-cloud'
 
-include 'quickstart'
 include 'config-server'
 include 'config-client'
