--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.spring.boot.configServer'
+group = 'com.spring.cloud'
 version = '0.0.1-SNAPSHOT'
 
 repositories {
