--- a/configData/application.yml
+++ b/configData/application.yml
@@ -3,3 +3,12 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka/
+
+---
+#Example of how to configure multiple profile sections
+spring:
+  profiles: production
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eurekasever/eureka/
