Changes sentences' token delimiter

--- a/configData/app-greeting.yml
+++ b/configData/app-greeting.yml
@@ -1,1 +1,1 @@
-greetings: Hi %s!,Hello %s!,Hi %s! What's up?!,Hey %s! How are you doing?
+greetings: Hi %s!#Hello %s!#Hi %s! What's up?!#Hey %s! How are you doing?
