--- a/app-greeting/src/main/resources/application.yml
+++ b/app-greeting/src/main/resources/application.yml
@@ -1,3 +1,22 @@
 ---
 server:
   port: ${PORT:${SERVER_PORT:0}} #this will cause a random, unused port to be assigned if none is specified
+
+---
+spring:
+  profile: morning
+
+greetings: Good morning %s!#Hi %s, have a nice day!#Hi %s, enjoy the day!
+
+---
+spring:
+  profile: lunch
+
+greetings: Hey %s, shall we have lunch?#Hi %s, would you like to join us for lunch?#Enjoy your meal %s!
+
+---
+spring:
+  profile: afternoon
+
+greetings: Good evening %s!#Bye bye %s, see you tomorrow!
+
