Configure RestTemplate with Ribbon to enable client-side load balancing targeting multiple app instances in Eureka

--- a/app-greeting/src/main/resources/application.yml
+++ b/app-greeting/src/main/resources/application.yml
@@ -4,19 +4,19 @@ server:
 
 ---
 spring:
-  profile: morning
+  profiles: morning
 
 greetings: Good morning %s!#Hi %s, have a nice day!#Hi %s, enjoy the day!
 
 ---
 spring:
-  profile: lunch
+  profiles: lunch
 
 greetings: Hey %s, shall we have lunch?#Hi %s, would you like to join us for lunch?#Enjoy your meal %s!
 
 ---
 spring:
-  profile: afternoon
+  profiles: afternoon
 
 greetings: Good evening %s!#Bye bye %s, see you tomorrow!
 
