--- a/app-greeting/src/main/resources/bootstrap.yml
+++ b/app-greeting/src/main/resources/bootstrap.yml
@@ -1,4 +1,9 @@
 ---
+# Allows Eureka to recognize two apps of the same type on the same host as separate instances:
+eureka:
+  instance:
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 spring:
   application:
     name: app-greeting
