--- a/app-sentence/src/main/resources/bootstrap.yml
+++ b/app-sentence/src/main/resources/bootstrap.yml
@@ -6,3 +6,9 @@ spring:
     config:
       uri: http://localhost:8001
       failFast: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
