Creates a Zuul reverse proxy to apps registered in Eureka

--- a/configData/application.yml
+++ b/configData/application.yml
@@ -11,4 +11,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eurekasever/eureka/
+      defaultZone: http://eurekasever/eureka/w
